objects/FSL_Other_Claimable__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIR CONDITIONING ORINGS</fullName>
                </value>
                <value>
                    <fullName>AIR DRYER</fullName>
                </value>
                <value>
                    <fullName>AIR FILTER</fullName>
                </value>
                <value>
                    <fullName>ANTIFREEZE/COOLANT</fullName>
                </value>
                <value>
                    <fullName>ASSEMBLY LUBE</fullName>
                </value>
                <value>
                    <fullName>BELT</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>CLAMP</fullName>
                </value>
                <value>
                    <fullName>COMMERCIAL TRAVEL</fullName>
                </value>
                <value>
                    <fullName>CONTRACTED SERVICES</fullName>
                </value>
                <value>
                    <fullName>COOLANT FILTER</fullName>
                </value>
                <value>
                    <fullName>CRANKCASE BRTHR ELEMENT</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>DEF FILTER</fullName>
                </value>
                <value>
                    <fullName>DRIVELINE STRAP KIT</fullName>
                </value>
                <value>
                    <fullName>EXHAUST MOUNTING STRAP</fullName>
                </value>
                <value>
                    <fullName>FUEL FILTER</fullName>
                </value>
                <value>
                    <fullName>HANDLING ALLOWANCE</fullName>
                </value>
                <value>
                    <fullName>HARDWARE/FASTENERS</fullName>
                </value>
                <value>
                    <fullName>HOSE</fullName>
                </value>
                <value>
                    <fullName>IMPORT CHARGES</fullName>
                </value>
                <value>
                    <fullName>OEM GASKET</fullName>
                </value>
                <value>
                    <fullName>OIL</fullName>
                </value>
                <value>
                    <fullName>OIL FILTER</fullName>
                </value>
                <value>
                    <fullName>PAINT</fullName>
                </value>
                <value>
                    <fullName>RADIATOR FLUSH</fullName>
                </value>
                <value>
                    <fullName>REPLACEMENT ENGINE</fullName>
                </value>
                <value>
                    <fullName>SEALANT/ADHESIVE</fullName>
                </value>
                <value>
                    <fullName>TIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>Other_Claimables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Other Claimables</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Other Claimable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Claimables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_Mandatory</fullName>
        <active>true</active>
        <description>Description mandatory when type is UNLISTED</description>
        <errorConditionFormula>AND( ISPICKVAL( Item__c , &apos;UNLISTED&apos;) , ISBLANK( Description__c ) )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please provide a description for the Unlisted Other Claimable item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_OtherClaimables</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(Service_Order__r.Status, &quot;Closed&quot;),
ISPICKVAL(Service_Order__r.Status, &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
</CustomObject>